--- a/docker/spark/Dockerfile
+++ b/docker/spark/Dockerfile
@@ -11,14 +11,16 @@ COPY requirements.txt .
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y --no-install-recommends wget && \
-    wget -q https://jdbc.postgresql.org/download/postgresql-42.7.6.jar \
-         -O /opt/jars/postgresql-42.7.6.jar && \
     pip3 install --no-cache-dir -r requirements.txt && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-COPY ./spark /opt/jobs/
-COPY ./data /opt/data/
-COPY ./jars /opt/jars/
+COPY spark/ /opt/jobs/
+COPY data/ /opt/data/
+COPY jars/ /opt/jars/
+
+RUN chown -R spark:spark /opt/jobs /opt/data /opt/jars
 
 USER spark
+
+# ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
